--- a/portfolio.css
+++ b/portfolio.css
@@ -1,23 +1,35 @@
 body
 {
-background-color: cornflowerblue;
+background-color: white;
 }
 header
 {
   font-size: 20px;
-  border: 2px solid white;
   display: flex;
-  background-color: bisque;
+  background-image:linear-gradient(to right,pink,lightblue,pink);
+}
+header h1
+{
+  font-size: 40px;
+  border: 3px solid pink;
+  border-radius: 10px;
+  box-shadow: 4px 4px 4px white;
+  margin-bottom: 10px;
 }
 nav
 {
+  background-color:white;
   display: flex;
   justify-content: right;
   margin-left:60%;
+  border-radius: 10px;
+  
 }
 nav a
 {
+  justify-content: space-between;
   margin: 5px;
+  
 }
 h1
 {
@@ -34,12 +46,11 @@ h2
   padding-bottom: 10px;
 }
 
-.about-me
+.container
 {
   display:flex;
   margin: 10px;
 }
-
 .aside
 {
   font-size: 30px;
@@ -47,13 +58,51 @@ h2
   border-right: 5px solid black;
   padding-right: 10px;
   padding-top: 20px;
+  width: 200px;
 }
 
-.content-1
+.content
 {
 text-align: center;
 font:20px;
 margin-left: 22px;
-width:100%
+width:1000px;
 }
 
+.boxes
+{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width:700px;
+
+}
+#background-img
+{
+  background-image: linear-gradient(to right,white, pink,lightblue,white);
+  height:100px;
+  box-shadow: 4px 4px 6px white;
+  color:blueviolet;
+  text-align: right;
+}
+#background-img:hover
+{
+  box-shadow: 5px 5px 6px black;
+}
+#my-image
+{
+  width:100%;
+}
+img
+{
+  margin:10px;
+}
+h1:hover
+{
+  box-shadow:4px 4px 4px black;
+}
+a:hover
+{
+  background-color:pink;
+}
+  
