--- a/portfolio.css
+++ b/portfolio.css
@@ -66,8 +66,6 @@ color:blueviolet;
 text-align: left;
 width:100px;
 height: 40px;
-
-
 }
 .aside
 {
@@ -85,7 +83,7 @@ background-image: linear-gradient(to right,pink,white,pink,white,pink);
 text-align: center;
 font:20px;
 margin-left: 22px;
-width:1500px;
+width:1000px;
 flex-direction: column;
 flex-wrap: wrap;
 }
@@ -132,4 +130,15 @@ a:hover
   box-shadow: 5px 5px 5px black;
 }
 
-  
+#work-div
+{
+  height: 500px;
+  background-image: url("./myimage.jpg");
+  background-position: center;
+  display: flex;
+}
+
+.text-left
+{
+align-self: flex-end;
+}
