--- a/portfolio.css
+++ b/portfolio.css
@@ -1,6 +1,8 @@
 body
 {
 background-color:floralwhite;
+background-image:linear-gradient(to right,pink,white,pink,white)
+
 
 }
 header
@@ -39,6 +41,16 @@ h1
   text-align: left;
 
 }
+#subtitle
+{
+  font-family: fantasy;
+   color:blueviolet;
+  font-size: 30px;
+  align-self: center;
+  margin-left: 500px;
+  background-color: aliceblue;
+  opacity: 60%;
+}
 h2
 {
   text-align: center;
@@ -64,7 +76,7 @@ h2
 background-image: linear-gradient(to right,white,pink,white);
 color:blueviolet;
 text-align: left;
-width:100px;
+width:150px;
 height: 40px;
 }
 .aside
@@ -83,7 +95,7 @@ background-image: linear-gradient(to right,pink,white,pink,white,pink);
 text-align: center;
 font:20px;
 margin-left: 22px;
-width:1000px;
+width:1500px;
 flex-direction: column;
 flex-wrap: wrap;
 }
@@ -93,16 +105,17 @@ flex-wrap: wrap;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  width:700px;
+  width:1000px;
 
 }
 #background-img
 {
-  background-image: linear-gradient(to right,white, pink,lightblue,white);
-  height:100px;
-  box-shadow: 4px 4px 6px white;
-  color:blueviolet;
-  text-align: right;
+  background-image: url("/Users/yamini/Desktop/code/portfolio/pink.png");
+  height:200px;
+  width:1500px;
+  background-position: center;
+  display: flex;
+  margin:0;
 }
 #background-img:hover
 {
@@ -141,4 +154,21 @@ a:hover
 .text-left
 {
 align-self: flex-end;
+}
+.box-1
+{
+  flex-wrap: wrap;
+  margin:5px;
+  display:flex;
+  background-image: linear-gradient(to right,blue,black);
+  width:450px;
+  height:200px;
+  border: 2px solid black;
+  
+}
+.footer
+{
+ display: flex;
+ justify-content: space-around;
+ flex-direction: row;
 }
