--- a/portfolio.css
+++ b/portfolio.css
@@ -1,193 +1,206 @@
-body
-{
-background-color:floralwhite;
-background-image:linear-gradient(to right,pink,white,pink,white)
-
-
+/**
+* Styles for mobile-first
+*/
+header {
+    background-image:linear-gradient(to right,pink,lightblue,pink);
+    padding: 10px;
 }
-header
-{
-  font-size: 20px;
-  display: flex;
-  background-image:linear-gradient(to right,pink,lightblue,pink);
-}
-header h1
-{
-  font-size: 40px;
-  border: 3px solid pink;
+header h1 {
+    font-size: 40px;
   border-radius: 10px;
-  box-shadow: 4px 4px 4px white;
   margin-bottom: 10px;
-}
-nav
-{
-  background-color:white;
-  display: flex;
-  justify-content: right;
-  margin-left:60%;
-  border-radius: 10px;
-  
-}
-nav a
-{
-  justify-content: space-between;
-  margin: 5px;
-  
-}
-h1
-{
-  font-size: 30px;
-  margin: 0%;
-  text-align: left;
-
-}
-#subtitle
-{
-  font-family: fantasy;
-   color:blueviolet;
-  font-size: 30px;
-  align-self: center;
-  margin-left: 500px;
-  background-color: aliceblue;
-  opacity: 60%;
-}
-h2
-{
   text-align: center;
-  font-size:50px;
-  color:blueviolet;
-  padding-bottom: 10px;
+}
+nav a{
+ display: block;
+ font-size: 20px;
+ padding: 10px;
+ margin: 10px;
+ border-top: 1px solid pink;
+ background-color: lightblue;
+ color: black;
+ text-decoration: none;
+ border: 1px solid black;
 }
 
-.container
-{
-  display:flex;
-  margin: 10px;
-  
-}
-#babuji
-{
- width:200px;
- height:200px;
- 
-}
-.corner
-{
-background-image: linear-gradient(to right,white,pink,white);
-color:blueviolet;
-text-align: left;
-width:150px;
-height: 40px;
-}
-.aside
-{
-  font-size: 30px;
-  font-family: fantasy;
-  border-right: 5px solid black;
-  padding-right: 10px;
-  padding-top: 20px;
-  width: 200px;
-}
-
-.content
-{
-background-image: linear-gradient(to right,pink,white,pink,white,pink);
-text-align: center;
-font:20px;
-margin-left: 22px;
-width:1500px;
-flex-direction: column;
-flex-wrap: wrap;
-}
-
-.boxes
-{
-
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: 50px;
-  width:1000px;
-  height: 1000px;
-  justify-content: center;
-
-}
 #background-img
 {
   background-image: url("./pink.png");
   height:200px;
-  width:1500px;
   background-position: center;
+  width: 100vw;
+}
+
+#subtitle
+{
+  font-family: fantasy;
+  color:blueviolet;
+  font-size: 30px;
+  background-color: aliceblue;
+  opacity: 60%;
+  text-align: center;
+  position: relative;
+  top: 50%;
+  padding: 10px;
+}
+
+.aside
+{
+  font-size: 30px;
+  font-family: fantasy;
+  padding: 20px;
+  text-align: center;
+}
+
+.content
+{ 
+    text-align: center;
+}
+
+#about-me-image
+{
+   margin-top: 20px;
+   height: 300px;
+   background-image: url("./myimage.jpg");
+   background-position: center;
+   background-size: cover;
+   display: flex;
+   border: 2px solid black;
+   box-shadow: 4px 4px 4px pink;
+}
+
+.corner
+{
+    display: block;
+    background-image: linear-gradient(to right,white,pink,white);
+    color:blueviolet;
+    text-align: left;
+    padding: 10px;
+    text-decoration: none;
+    align-self: flex-end;
+}
+
+#work-div
+{
+    height: 400px;
+  background-image: url("./horiseon.png");
+  background-position: center;
+  background-size: cover;
   display: flex;
-  margin:0;
 }
-#background-img:hover
+
+.projects
 {
-  box-shadow: 5px 5px 6px black;
+  margin-top: 10px;
+  background-image: linear-gradient(to right,pink,white);
 }
-#my-image
+
+.box-1
 {
-  width:100%;
+  background-image: url("./project.png");
+  background-size: cover;
+  height: 250px;
+  border: 2px solid black;
+  box-shadow: 2px 2px 2px solid black;
+  margin: 10px;
 }
-img
-{
-  margin:2px;
+
+.footer a {
+    display: block;
+    font-size: 20px;
+    padding: 10px;
+    margin: 10px;
+    background-color: pink;
+    color: black;
+    text-decoration: none;
+    border: 1px solid black;
 }
-h1:hover
-{
-  box-shadow:4px 4px 4px black;
-}
+
+
+/**
+* Hover Animations
+*/
+
 a:hover
 {
   background-color:pink;
   box-shadow: 5px 5px 5px black;
 }
+
 .corner:hover
 {
   box-shadow: 5px 5px 5px black;
 }
 
-#work-div
-{
-  height: 1500px;
-  background-image: url("./horiseon.png");
-  background-position: center;
-  display: flex;
-  background-repeat: no-repeat;
-  background-size: cover;
-  
-}
-
-.text-left
-{
-  border:4px solid black;
-align-self: flex-end;
-}
-.box-1
-{
- 
-  justify-content: space-between;
-  flex-wrap: wrap;
-  margin:15px;
-  display:flex;
-  background-image: linear-gradient(to right,blue,black);
-  width:450px;
-  height:300px;
-  border: 2px solid black;
-  box-shadow: 2px 2px 2px solid black;
-  
-}
-.footer
-{
- display: flex;
- justify-content: space-around;
- flex-direction: row;
-}
-.box-1:hover
-{
-  background-image: linear-gradient(to right,white,pink);
-}
 #work-div:hover
 {
 opacity: 90%;
 border:5px solid black;
+}
+
+.aside:hover {
+    color: pink;
+    cursor: pointer;
+}
+
+.footer a:hover {
+    background-color: lightblue;
+}
+/**
+* Media Queries for Desktop view
+*/
+@media screen and (min-width: 768px) {
+     header{
+        display: flex;
+        justify-content: space-between;
+     }
+     nav {
+        display: flex;
+     }
+     nav a {
+        margin-top: 0px;
+     }
+
+     .container {
+        display: flex;
+     }
+
+     .aside {
+        border-right: 5px solid black;
+        width: 200px;
+        margin-bottom: 10px;
+        margin-top: 10px;
+        margin-right: 20px;
+     }
+
+     #about-me-image {
+        width: 300px;
+        margin-top: 0px;
+        margin-left: 50px;
+     }
+
+     .content {
+        display: flex;
+        margin-top: 20px;
+        text-align: left;
+     }
+
+     .boxes{
+        display: flex;
+        flex-wrap: wrap;
+     }
+
+     .box-1{
+        width: 535px;
+     }
+
+     .projects{ 
+        width: 1110px;
+     }
+
+     .footer a {
+        width: 300px;
+        height: 50px;
+        text-align: center;
+    }
 }
